--- a/package.json
+++ b/package.json
@@ -28,12 +28,21 @@
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "classnames": "^2.2.5",
     "css-loader": "^0.25.0",
     "eslint": "^3.8.1",
     "file-loader": "^0.9.0",
     "jsdom": "^9.8.3",
-    "node-libs-browser": "^1.0.0",
+    "react": "^15.3.2",
     "react-addons-test-utils": "^15.4.0",
+    "react-bootstrap": "^0.30.5",
+    "react-color": "^2.3.2",
+    "react-dom": "^15.4.0",
+    "react-fontawesome": "^1.5.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.0",
+    "redux-thunk": "^2.1.0",
     "script-loader": "^0.7.0",
     "standard": "^8.4.0",
     "standard-loader": "^5.0.0",
@@ -45,18 +54,10 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "classnames": "^2.2.5",
     "font-awesome": "^4.6.3",
     "lodash.findindex": "^4.6.0",
     "lodash.reject": "^4.4.0",
-    "react": "^15.3.2",
-    "react-bootstrap": "^0.30.5",
-    "react-color": "^2.3.2",
-    "react-dom": "^15.4.0",
-    "react-redux": "^4.4.5",
-    "redux": "^3.6.0",
-    "redux-logger": "^2.7.0",
-    "redux-thunk": "^2.1.0",
+    "node-libs-browser": "^1.0.0",
     "whatwg-fetch": "^1.0.0"
   }
 }
