--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "ignore": []
   },
   "devDependencies": {
+  },
+  "dependencies": {
     "babel-core": "^6.17.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
@@ -50,11 +52,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2"
-  },
-  "dependencies": {
-    "bootstrap": "^3.3.7",
-    "font-awesome": "^4.6.3",
+    "webpack": "^1.13.2",
     "lodash.findindex": "^4.6.0",
     "lodash.reject": "^4.4.0",
     "node-libs-browser": "^1.0.0",
