--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "parser": "babel-eslint",
     "ignore": []
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
     "babel-core": "^6.17.0",
     "babel-eslint": "^6.1.2",
@@ -35,12 +34,19 @@
     "eslint": "^3.8.1",
     "file-loader": "^0.9.0",
     "jsdom": "^9.8.3",
-    "react": "^15.3.2",
+    "json-loader": "^0.5.4",
+    "lodash.findindex": "^4.6.0",
+    "lodash.reject": "^4.4.0",
+    "node-libs-browser": "^1.0.0",
+    "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.0",
     "react-bootstrap": "^0.30.5",
+    "react-collapse": "^2.3.3",
     "react-color": "^2.3.2",
     "react-dom": "^15.4.0",
     "react-fontawesome": "^1.5.0",
+    "react-height": "^2.1.1",
+    "react-motion": "^0.4.7",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
@@ -53,9 +59,6 @@
     "stylus-loader": "^2.3.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
-    "lodash.findindex": "^4.6.0",
-    "lodash.reject": "^4.4.0",
-    "node-libs-browser": "^1.0.0",
     "whatwg-fetch": "^1.0.0"
   }
 }
