--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=development && webpack --watch",
-    "servdev": "webpack-dev-server --port 8082 --watch --colors --inline --hot --content-base dist/",
+    "servdev": "NODE_ENV=development && webpack-dev-server --port 8082 --watch --colors --inline --hot --content-base dist/",
     "build": "NODE_ENV=production webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,7 +22,7 @@
   "devDependencies": {},
   "dependencies": {
     "babel-core": "^6.17.0",
-    "babel-eslint": "^6.1.2",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-class-properties": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
@@ -30,14 +30,14 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "classnames": "^2.2.5",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.26.1",
     "eslint": "^3.8.1",
     "file-loader": "^0.9.0",
     "jsdom": "^9.8.3",
     "json-loader": "^0.5.4",
     "lodash.findindex": "^4.6.0",
     "lodash.reject": "^4.4.0",
-    "node-libs-browser": "^1.0.0",
+    "node-libs-browser": "^2.0.0",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.0",
     "react-bootstrap": "^0.30.5",
@@ -47,7 +47,7 @@
     "react-fontawesome": "^1.5.0",
     "react-height": "^2.1.1",
     "react-motion": "^0.4.7",
-    "react-redux": "^4.4.5",
+    "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
@@ -59,6 +59,6 @@
     "stylus-loader": "^2.3.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
-    "whatwg-fetch": "^1.0.0"
+    "whatwg-fetch": "^2.0.2"
   }
 }
