--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=development && webpack --watch",
-    "servdev": "NODE_ENV=development && webpack-dev-server --port 8082 --watch --colors --inline --hot --content-base dist/",
+    "servdev": "NODE_ENV=development && webpack-dev-server --port 8082 --watch --colors --no-info --inline --hot --content-base dist/",
     "build": "NODE_ENV=production webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-static-mockapi": "json-server --routes api/routes.json --watch api/static_db.json --port 3001"
@@ -44,7 +44,7 @@
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.0",
     "react-bootstrap": "^0.30.5",
-    "react-collapse": "^2.3.3",
+    "react-collapse": "^3.2.0",
     "react-color": "^2.3.2",
     "react-dom": "^15.4.0",
     "react-fontawesome": "^1.5.0",
