--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "NODE_ENV=development && webpack --watch",
     "servdev": "NODE_ENV=development && webpack-dev-server --port 8082 --watch --colors --no-info --inline --hot --content-base dist/",
+    "start-static-mockapi": "node api/server.js",
     "build": "NODE_ENV=production webpack -p",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start-static-mockapi": "json-server --routes api/routes.json --watch api/static_db.json --port 3001"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Côme Huguiès",
   "license": "ISC",
